<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/axofond"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    tools:context=".RegisterActivity">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@drawable/axologo"/>

    <EditText
        android:id="@+id/txtLogin"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="100dp"
        android:background="#ffffff"
        android:hint="@string/username" />



    <EditText
        android:id="@+id/txtMailUser"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:inputType="textEmailAddress"
        android:background="#ffffff"
        android:hint="@string/adresse_mail"/>

    <EditText
        android:id="@+id/txtMotDePasse"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:hint="@string/password" />

    <EditText
        android:id="@+id/txtConfMotDePasse"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:inputType="textPassword"
        android:hint="@string/confirmez_le_mot_de_passe" />

    <Button
        android:id="@+id/btnRegister"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/enregistrer" />

    <Button
        android:id="@+id/btnReset"
        android:layout_width="190dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:text="@string/raz" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:text="@string/d_j_enregistr"
            android:textColor="#ffffff" />

        <TextView
            android:id="@+id/txtViewRegister"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:paddingLeft="10dp"
            android:text="@string/enregister"
            android:textColor="#ffffff"
            android:textStyle="bold" />

    </LinearLayout>



</LinearLayout>